Fixed alignment & output bug.

--- a/sass/blueplate/_text.scss
+++ b/sass/blueplate/_text.scss
@@ -41,6 +41,9 @@ $font-x2-large 				: 48px;
 
 // Font
 // ---------------------------------------------------------------------------------------
+@mixin font-family($font: $helvetica) {
+	font-family: $font;
+}
 @mixin font-size($size: $font-base) {
 	font-size: $size;
 	font-size: calculate-rem-size($size);
@@ -51,6 +54,9 @@ $font-x2-large 				: 48px;
 @mixin line-height($size: $font-base) {
 	line-height: $size;
 	line-height: calculate-rem-size($size);
+}
+@mixin letter-spacing($letter-spacing: normal) {
+	letter-spacing: $letter-spacing;
 }
 
 
@@ -73,12 +79,18 @@ $font-x2-large 				: 48px;
 	text-overflow: ellipsis;
 	white-space: nowrap;
 }
+@mixin text-font($font: $helvetica) {
+	@include font-family($font);
+}
 @mixin text-hide() {
 	border:0; 
 	font: 0/0 a; 
 	text-shadow: none; 
 	color: transparent; 
 	background-color: transparent;
+}
+@mixin text-letter-spacing($letter-spacing: normal) {
+	@include letter-spacing($letter-spacing);
 }
 @mixin text-size($size: $font-base) {
 	@include font-size($size);
